--- a/automatic layout/Base.lproj/Main.storyboard
+++ b/automatic layout/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,51 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="automatic_layout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4IK-Wh-Dgp">
+                                <rect key="frame" x="31" y="159" width="313" height="21"/>
+                                <color key="backgroundColor" red="0.74473599089999998" green="0.74473599089999998" blue="0.74473599089999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jeU-HX-ITR">
+                                <rect key="frame" x="31" y="201" width="313" height="21"/>
+                                <color key="backgroundColor" red="0.17247821969999999" green="1" blue="0.94828894409999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDk-aO-94x">
+                                <rect key="frame" x="31" y="253" width="313" height="21"/>
+                                <color key="backgroundColor" red="0.91372549020000005" green="0.44705882349999998" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jeU-HX-ITR" firstAttribute="top" secondItem="4IK-Wh-Dgp" secondAttribute="bottom" constant="21" id="1qS-PE-S4u"/>
+                            <constraint firstItem="JDk-aO-94x" firstAttribute="leading" secondItem="jeU-HX-ITR" secondAttribute="leading" id="7xY-5W-ugg"/>
+                            <constraint firstItem="jeU-HX-ITR" firstAttribute="leading" secondItem="4IK-Wh-Dgp" secondAttribute="leading" id="I4R-yY-PKV"/>
+                            <constraint firstItem="4IK-Wh-Dgp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="31" id="LHv-rI-8lg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4IK-Wh-Dgp" secondAttribute="trailing" constant="31" id="LTM-l3-udt"/>
+                            <constraint firstItem="jeU-HX-ITR" firstAttribute="trailing" secondItem="4IK-Wh-Dgp" secondAttribute="trailing" id="ec7-sQ-OHe"/>
+                            <constraint firstItem="JDk-aO-94x" firstAttribute="trailing" secondItem="jeU-HX-ITR" secondAttribute="trailing" id="ifk-Bt-xg3"/>
+                            <constraint firstItem="4IK-Wh-Dgp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="139" id="lvH-EF-pBC"/>
+                            <constraint firstItem="JDk-aO-94x" firstAttribute="top" secondItem="jeU-HX-ITR" secondAttribute="bottom" constant="31" id="qlq-Ob-GDl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
         </scene>
     </scenes>
 </document>
